eks/deployment.yaml
# Kubernetes Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-container
        image: 096432477737.dkr.ecr.eu-west-1.amazonaws.com/test-eden:latest
        ports:
        - containerPort: 5000
