eks/service.yaml
# Kubernetes Service
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
